# Red-Pill

./: App.tsx  ChartWorkspace.tsx  Instructions.md  README.md  constants.ts  index.css  index.html  index.tsx  main.tsx  metadata.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
Assets/ETHUSDT/: ETHUSDT_1d.csv  ETHUSDT_1w.csv
components/: App.tsx  AssetLibrary.tsx  BackgroundSettingsDialog.tsx  BottomPanel.tsx  CandleSettingsDialog.tsx  ChangelogEditor.tsx  Chart.tsx  ChartWorkspace.tsx  DatabaseBrowser.tsx  DeveloperTools.tsx  DownloadDialog.tsx  DrawingToolbar.tsx  FilePanel.tsx  GlobalErrorBoundary.tsx  GlobalModalManager.tsx  LatestAdditionsDialog.tsx  LayersPanel.tsx  MarketOfflineFallback.tsx  MarketStats.tsx  Popout.tsx  ReplayControls.tsx  SearchPalette.tsx  Sidebar.tsx  SplashController.tsx  StickyNote.tsx  StickyNoteOverlay.tsx  TabBar.tsx  Toolbar.tsx  TradingPanel.tsx  WatchlistPanel.tsx
constants/: changelog.ts  devLogs.ts  seedData.ts
database/: README.md
electron/: ingestWorker.js  main.js  preload.js
hooks/: useAdvancedReplay.ts  useChangelog.ts  useChartPersistence.ts  useChartReplay.ts  useDevLogs.ts  useDrawingRegistry.ts  useFileSystem.ts  useLiveData.ts  useOnlineStatus.ts  useOrderPersistence.ts  useReport.ts  useSmartFetch.ts  useStickyNotes.ts  useSymbolPersistence.ts  useTelemetry.ts  useTradePersistence.ts
src/: App.tsx  constants.ts  main.tsx  types.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: App.tsx  (+32 more)
utils/: binance.ts  dataUtils.ts  errors.ts  logger.ts  storage.ts
(+33 files in other folders)
