[package]
name = "red-pill-charting"
version = "1.2.5"
description = "Red Pill Charting - High Performance Financial Analysis"
authors = ["Red Pill Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
